# react-native-printer

./: .babelrc  .eslintrc.js  .gitignore  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  package.json  react-native-printer.podspec  tsconfig.json
android/: build.gradle  gradle.properties
android/libs/: serialport.aar
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: Android.mk  CMakeLists.txt  SerialPort.c  SerialPort.h  gen_SerialPort_h.sh  serialport.cpp
android/src/main/java/android_serialport_api/: SerialDevice.kt  SerialPort.java  SerialPort.kt  SerialPortFinder.kt
example/: app.json  babel.config.js  index.js  package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/PrinterExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/PrinterExample.xcodeproj/: project.pbxproj
example/ios/PrinterExampleTests/: PrinterExampleTests.m
example/src/: App.tsx  BluetoothPrinter.tsx  Button.tsx  NetworkPrinter.tsx  Row.tsx  SerialPrinter.tsx  USBPrinter.tsx
example/src/socket/: server.js
ios/: Printer.mm  Printer.swift
ios/Printer.xcodeproj/: project.pbxproj
src/: ColumnConfig.tsx  DesignBuilder.tsx  DeviceScanner.tsx  DeviceScannerEventEmitter.tsx  ExtendedNativeEventEmitter.tsx  JobBuilder.tsx  RNPrinter.tsx  RNPrinterEventEmitter.tsx  TableBuilder.tsx  TagHelper.tsx  index.tsx
src/definitions/: DeviceScanner.d.ts  DeviceScanner.tsx  EscPos.tsx  RNPrinter.d.ts  RNPrinter.tsx  index.tsx
(+101 files in other folders)
